# stm32f4xx-rtic-blinky

./: Cargo.toml
src/: main.rs
