[package]
name = "stm32f4xx-rtic-blinky"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m-rtic = "0.5.3"
embedded-hal = "0.2.4"
panic-halt = "0.2"
stm32f4xx-hal = { version = "0.8.3", default-features = false, features = ["rt", "stm32f407"] }

[profile.release]
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better (link time) optimisations
opt-level = "s"     # optimise for size
